updated gethoroscope package and added tests. populated web server wiht daily, yearly, and monthly horoscopes

--- a/cmd/horoscoped-web/web/index.html
+++ b/cmd/horoscoped-web/web/index.html
@@ -43,10 +43,10 @@
         <section class="jumbotron text-center">
           <div class="container">
             <h1>Daily Horoscope</h1>
-            <p class="lead text-muted">See your daily horoscope down below.</p>
+            <p class="lead text-muted">See your daily horoscope below.</p>
             <p>
-              <a id="monthly" href="monthly" class="btn btn-primary my-2">Monthly</a>
-              <a id="yearly" href="yearly" class="btn btn-secondary my-2">Yearly</a>
+              <a id="monthly" href="month" class="btn btn-primary my-2">Monthly</a>
+              <a id="yearly" href="year" class="btn btn-secondary my-2">Yearly</a>
             </p>
           </div>
         </section>
