Stable version of ark,horowebserver and databse

--- a/cmd/horoscoped-web/web/monthly.html
+++ b/cmd/horoscoped-web/web/monthly.html
@@ -62,7 +62,7 @@
                       <small class="text-muted">{{.Sunsign}}</small>
                       <p class="card-text">{{.Horoscope}}</p>
                       <div class="d-flex justify-content-between align-items-center">
-                        <small class="text-muted">{{.Month}}</small>
+                        <small class="text-muted">For month: {{.Month}}</small>
                       </div>
                     </div>
                   </div>
