Try jenkins cicd

--- a/cmd/horoscoped-web/web/index.html
+++ b/cmd/horoscoped-web/web/index.html
@@ -14,7 +14,7 @@
             <div class="row">
               <div class="col-sm-8 col-md-7 py-4">
                 <h4 class="text-white">About</h4>
-                <p class="text-muted">Check what the stars have to say about you.</p>
+                <p class="text-muted">Check what the stars have to say about you. Updated by jenkins!</p>
               </div>
               <div class="col-sm-4 offset-md-1 py-4">
                 <h4 class="text-white">Contact</h4>
