Try jenkins cicd 2

--- a/cmd/horoscoped-web/web/index.html
+++ b/cmd/horoscoped-web/web/index.html
@@ -13,15 +13,15 @@
           <div class="container">
             <div class="row">
               <div class="col-sm-8 col-md-7 py-4">
-                <h4 class="text-white">About</h4>
+                <h4 class="">About</h4>
                 <p class="text-muted">Check what the stars have to say about you. Updated by jenkins!</p>
               </div>
               <div class="col-sm-4 offset-md-1 py-4">
-                <h4 class="text-white">Contact</h4>
+                <h4 class="">Contact</h4>
                 <ul class="list-unstyled">
-                    <li><a href="#" class="text-white">Follow on Twitter</a></li>
-                    <li><a href="#" class="text-white">Like on Facebook</a></li>
-                    <li><a href="#" class="text-white">Email me</a></li>
+                    <li><a href="#" class="">Follow on Twitter</a></li>
+                    <li><a href="#" class="">Like on Facebook</a></li>
+                    <li><a href="#" class="">Email me</a></li>
                 </ul>
               </div>
             </div>
