--- a/cmd/horoscoped-web/web/index.html
+++ b/cmd/horoscoped-web/web/index.html
@@ -13,7 +13,7 @@
           <div class="container">
             <div class="row">
               <div class="col-sm-8 col-md-7 py-4">
-                <h4 class="">About</h4>
+                <h4 class="">About Horoscope</h4>
                 <p class="text-muted">Check what the stars have to say about you. Updated by Jenkins!</p>
               </div>
               <div class="col-sm-4 offset-md-1 py-4">
